# manager-llm

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: config.py  llm_manager.py  llm_schemas.py  main.py  routes.py
app/clients/: base.py  groq.py  mock.py  openai.py
